Renaming page titles to longer, more SEO friendly names

--- a/engineering/engineering-training.html
+++ b/engineering/engineering-training.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Ambient Ideas, LLC : Page Redirection</title>
+<title>Ambient Ideas, LLC : Engineering Training</title>
 
 <meta HTTP-EQUIV="REFRESH" content="0; url=http://www.ambientideas.com/training/">
 
