--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Ambient Ideas, LLC : Multimedia Consultancy &amp; Software Engineering</title>
+<title>Ambient Ideas, LLC : A Multimedia &amp; Software Engineering Consultancy in Denver, Colorado</title>
 <!-- InstanceEndEditable -->
 
 <!-- InstanceBeginEditable name="stylesheetOption" -->
