--- a/software/index.html
+++ b/software/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Ambient Ideas, LLC : Software</title>
+<title>Ambient Ideas, LLC : Software Architecture, Engineering &amp; Development</title>
 <!-- InstanceEndEditable -->
 
 <!-- InstanceBeginEditable name="stylesheetOption" -->
