--- a/error/page-not-found.html
+++ b/error/page-not-found.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Ambient Ideas, LLC : </title>
+<title>Ambient Ideas, LLC : Page Not Found</title>
 <!-- InstanceEndEditable -->
 
 <!-- InstanceBeginEditable name="stylesheetOption" -->
