--- a/training/index.html
+++ b/training/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Ambient Ideas, LLC : Training</title>
+<title>Ambient Ideas, LLC : Software Development Mentoring, Training &amp; Authored Books</title>
 <!-- InstanceEndEditable -->
 
 <!-- InstanceBeginEditable name="stylesheetOption" -->
