Changed homepage link to / instead of index.html for separation from technology used (perhaps we want to have /index.php in the future)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
 <div class="banner">
 	<div class="wrapper">
 		<div class="panelLeft">
-			<a href="/index.html"><div class="logo"></div></a>
+			<a href="/"><div class="logo"></div></a>
 		
 		
 			
