--- a/marketing/index.html
+++ b/marketing/index.html
@@ -39,7 +39,7 @@ $(document).ready(function() {
 <div class="banner">
 	<div class="wrapper">
 		<div class="panelLeft">
-			<a href="/index.html"><div class="logo"></div></a>
+			<a href="/"><div class="logo"></div></a>
 		
 		
 			
