--- a/advertising/advertising-online-clients.html
+++ b/advertising/advertising-online-clients.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="ROBOTS" content="NOINDEX">
 <title>Ambient Ideas, LLC : Advertising Online Clients</title>
 
 <meta HTTP-EQUIV="REFRESH" content="0; url=http://www.ambientideas.com/marketing/">
