--- a/error/page-not-found.html
+++ b/error/page-not-found.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Content Page.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="ROBOTS" content="NOINDEX">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Ambient Ideas, LLC : Page Not Found</title>
 <!-- InstanceEndEditable -->
