--- a/marketing/index.html
+++ b/marketing/index.html
@@ -252,7 +252,16 @@ design direction suggestions, or step in during a team member's absence.
 </div><!--End Footer-->
 
 
-
+<!-- Google Analytics -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-90707-4");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </body>
 <!-- InstanceEnd --></html>
