--- a/software/index.html
+++ b/software/index.html
@@ -246,7 +246,16 @@ verification up to complete custom application development.
 </div><!--End Footer-->
 
 
-
+<!-- Google Analytics -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-90707-4");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </body>
 <!-- InstanceEnd --></html>
