-Changed path for blog feed to querystring in place of URL re-write one

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ $(document).ready(function() {
 				<script type="text/javascript">
 				
 					$('#newsfeed').rssReader({
-						targeturl: "http://ambientideas.com/blog/index.php/feed",
+						targeturl: "http://ambientideas.com/blog/?feed=rss2",
 						items: 3,
 						Maxlength:20,
 						loadingImg: '/javascript/jquery/rssreader-0.2/35-1.gif'
