Add Google webmaster tools verification

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ $(document).ready(function() {
 	});
 });
 </script>
-
+<meta name="google-site-verification" content="K0KlOCwFAvnlK5nW3lpIlbfJgGEAUL9uLKDjspa12zo" />
 
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
